Player names bugfix [No Wrap & Overflow Hidden]

--- a/static/BaseStyle.css
+++ b/static/BaseStyle.css
@@ -337,6 +337,8 @@ nav button {
         .participant-name {
             width: 100%;
             overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
         }
                   
     .stats-button {
